[gd_scene load_steps=12 format=3 uid="uid://ceuyspkny0k06"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_chgim"]
[ext_resource type="PackedScene" uid="uid://m263ykkpbvke" path="res://art/player.glb" id="1_pv3y5"]
[ext_resource type="AudioStream" uid="uid://cblg7glmb3hao" path="res://art/audio/effects/jump.wav" id="3_hlygg"]
[ext_resource type="AudioStream" uid="uid://byyk6au8y0hp6" path="res://art/audio/effects/die.wav" id="4_5p51k"]

[sub_resource type="SphereShape3D" id="SphereShape3D_a73wt"]
radius = 0.618551

[sub_resource type="CylinderShape3D" id="CylinderShape3D_3dkko"]
height = 0.246491
radius = 1.00457

[sub_resource type="Animation" id="Animation_7stpv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot/Character:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0.508445, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot/Character:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-0.174533, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Pivot:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0.121094, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Pivot:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-0.0733038, 0, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:collision_mask")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("AudioDie:playing")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath(".:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_yp1ua"]
resource_name = "die"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.8),
"transitions": PackedFloat32Array(2, 2, 0.5),
"update": 0,
"values": [Vector3(0, 0.121094, 0), Vector3(0, 3.521, 0), Vector3(0, 0.121, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4, 0.8),
"transitions": PackedFloat32Array(2, 2, 0.5),
"update": 0,
"values": [Vector3(-0.0733038, 0, 0), Vector3(1.61792, 3.23759, 0), Vector3(3.14159, 4.85551, 0)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:collision_mask")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [4, 6]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("AudioDie:playing")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_oyaue"]
resource_name = "float"
length = 1.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot/Character:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.3, 0.7, 1.2),
"transitions": PackedFloat32Array(0.5, 0.5, 1),
"update": 0,
"values": [Vector3(0, 0.508445, 0), Vector3(0, 0.35, 0), Vector3(0, 0.561528, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot/Character:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1, 0.5, 1.2),
"transitions": PackedFloat32Array(0.5, 2, 1),
"update": 0,
"values": [Vector3(-0.174533, 0, 0), Vector3(0.139626, 0, 0), Vector3(-0.15708, 0, 0)]
}

[sub_resource type="Animation" id="Animation_4i4ga"]
resource_name = "hit"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false, true, false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8v0hw"]
_data = {
"RESET": SubResource("Animation_7stpv"),
"die": SubResource("Animation_yp1ua"),
"float": SubResource("Animation_oyaue"),
"hit": SubResource("Animation_4i4ga")
}

[node name="Player" type="CharacterBody3D"]
collision_mask = 6
script = ExtResource("1_chgim")

[node name="Pivot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.997314, 0.0732381, 0, -0.0732381, 0.997314, 0, 0.121094, 0)

[node name="Character" parent="Pivot" instance=ExtResource("1_pv3y5")]
transform = Transform3D(1, 0, 0, 0, 0.984808, 0.173648, 0, -0.173648, 0.984808, 0, 0.508445, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.633767, 0)
shape = SubResource("SphereShape3D_a73wt")

[node name="MobDetector" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="MobDetector"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.621879, 0)
shape = SubResource("CylinderShape3D_3dkko")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_8v0hw")
}
autoplay = "float"

[node name="AudioJump" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_hlygg")

[node name="AudioDie" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_5p51k")

[connection signal="body_entered" from="MobDetector" to="." method="_on_mob_detector_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
